CHANGE LOG FOR PEGASUS
Version 1.06 working towards 1.1 Started 13 December 2001

1. Merged back to Main branch.  All general development will be in main branch 
       in the future with releases in side branches. Special side developments
       may temporarily be in side branches.
       Changed cimversion to 1.06.  We will do 1.1 based on functionality.

-------------------------------------------------------------------------

Version 1.1.1 - 3 August 2001 -  Development Branch (Work in Progress)
		current working dev branch of build

---------------------------------------------------------------------------
Version 1.1 - July 2001 Development branch (Work in PRogress)

1. (Mike Brasher) Fixed bug with XML generation (was not generating
   PARAMETER.REFERENCE constructs for references).

2. (Mike Brasher) Reworked server communication into new module scheme.
=======
1. (Karl) 6 Aug - extend ToMof functions. The MOF for a class can now be
	seen as part of CGIclient class displays.
	
2. (Karl) 7 Aug - Update CIM25 Schema from the "preliminary" version
	to the final version in Schemas\CIM25.  This included minor
	corrections, etc and a couple of file changes. This is the
	official final CIM 25 schema relesed by the DMTF.  This change
	should not affect any current work.
3. (Karl) 7 Aug 2001 - Added CIM Schema 2.6 (preliminary) to the Schemas
	directorys.  Note however that today the make repository still
	loads the 2.5 schema.
	
4. (Karl) 8 Aug 2001 - Change cimmofparser.cpp to put header and trailers
        on XML output.
        
5. (Denise Eckstein - HP) 13 Aug 2001 - Fixed an HP-UX compile problem
in various src/utils/mu commands (MoveCmd.cpp, PrependCmd.cpp, RmCmd.cpp,
RmDirHierCmd.cpp, StripCmd.cpp, TouchCmd.cpp).  aCC scopes variable
declarations in for loop initializers outside the loop, so multiple
"for (int i=0; i<10; i++);" statements cause a compile error.

6. (Nag Boranna - HP) 15 Aug 2001 - Modified Config framework to remove 